# fastmerkle

./: CMakeLists.txt  README.md  config.txt  dump2bin.go  main.c  merkle.cl
